# pyticles

./: pyproject.toml
pyticles/: __init__.py  __main__.py  input.py  interfaces.py  types.py
pyticles/objects/: __init__.py  cube.py  octtree.py  particle.py
