[tool.poetry]
name = "pyticles"
version = "0.1.0"
description = ""
authors = ["Benjamin van de Vorstenbosch <bencvdv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
